package com.myriamcounilh.safetynetalerts.endpoint.alerts;

import org.springframework.web.bind.annotation.RequestMapping;
import org.springframework.web.bind.annotation.RestController;

@RestController
@RequestMapping("/childAlert")
public class ChildAlertController {


    /***
     * TODO
     * liste d'enfant 18 ans ou moins qui habitent au domicile
     * La liste doit comprendre le prénom, le nom de famille de chaque enfant, son âge
     * et une liste des autres membres du foyer
     * Si 0 enfant, ça nous renvoi vide pour le nombre d'enfant
     */



}
