package com.myriamcounilh.safetynetalerts.endpoint.alerts;

import org.springframework.web.bind.annotation.RequestMapping;
import org.springframework.web.bind.annotation.RestController;

@RestController
@RequestMapping("/fire")
public class FireAdressController {

    /***
     * TODO
     * Liste des habitants vivants à l'adresse
     * Le numéro de la caserne des pompiers la desservant
     * La liste doit inclure le nom, le numéro de téléphone, l'âge et les antécédents médicaux (médicaments, posologies et allergies) pour chaque personnes
     */
}
