package com.myriamcounilh.safetynetalerts.endpoint.alerts;

public class FirestationStationNumberController {

    /***
     * TODO
     * Liste des personnes couvertes par la caserne de pompiers correspondante
     * Elle doit contenir : prénom, nom, adresse, numéro de téléphone.
     * Un décompte du nombre d'adultes et du nombre d'enfants 18 ans ou moins dans la zone desservie.
     */
}
