package com.myriamcounilh.safetynetalerts.endpoint.alerts;

import org.springframework.web.bind.annotation.RequestMapping;
import org.springframework.web.bind.annotation.RestController;

@RestController
@RequestMapping("/flood")
public class Flood {

    /***
     * TODO
     * Liste de tous les foyers desservis par la caserne.
     * Elle regroupe les personnes par adresse
     * Elle contient le nom, le téléphone, l'âge des habitants et les antécédents médicaux (médicaments, posologie et allergies)
     */
}
