package com.myriamcounilh.safetynetalerts.endpoint.alerts;

import org.springframework.web.bind.annotation.RequestMapping;
import org.springframework.web.bind.annotation.RestController;

@RestController
@RequestMapping("/personInfo")
public class PersonInfo {

    /***
     * TODO
     * nom, l'adresse, l'âge, l'adresse email, et les antécédents médicaux (médicaments, posologies, et allergies) pour chaque habitants
     * Si plusieurs personnes portent le même nom, elle doivent toutes apparâtre.
     */
}
