package com.myriamcounilh.safetynetalerts.endpoint;

import org.springframework.stereotype.Controller;

/**
 * TODO : http://localhost:8080/medicalRecord
 * Cet endpoint permettra d’effectuer les actions suivantes via Post/Put/Delete HTTP :
 * ● ajouter un dossier médical ;
 * ● mettre à jour un dossier médical existant (comme évoqué précédemment, supposer que le
 * prénom et le nom de famille ne changent pas) ;
 * ● supprimer un dossier médical (utilisez une combinaison de prénom et de nom comme
 * identificateur unique).
 */



@Controller
public class medicalRecordController {


}
