package com.myriamcounilh.safetynetalerts.service;

import org.springframework.stereotype.Service;

@Service
public class MedicalRecordService {

}
